# astro_amase

./: .gitignore  PARAMETERS.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
astro_amase/: __init__.py  constants.py  main.py
astro_amase/analysis/: __init__.py  best_fit_model.py  best_fit_model_old.py  determine_linewidth.py  determine_vlsr.py
astro_amase/config/: __init__.py  config_handler.py  user_input.py
astro_amase/core/: __init__.py  molecule_prediction.py  run_assignment.py  spectrum_assignment.py  structural_relevance.py
astro_amase/data/: __init__.py  create_dataset.py  load_data.py
astro_amase/output/: __init__.py  create_output_file.py
astro_amase/utils/: __init__.py  astro_utils.py  molsim.py  molsim_classes.py  molsim_utils.py  plotting.py
examples/: config_template.yaml
notebooks/: example_notebook.ipynb  vlsr_molecules.csv
