[metadata]
name = astro_amase
version = attr: astro_amase.version.__version__
author = Zachary Fried
author_email = zfried@mit.edu
description = Automated Molecular Assignment and Source Parameter Estimation for Radio Astronomy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zfried/astro_amase
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Chemistry
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pandas>=1.3.0
    numpy>=1.20.0
    rdkit>=2021.09.1
    scipy>=1.7.0,<1.14.0
    bokeh>=2.4.0
    numba>=0.54.0
    astropy>=4.3.0
    matplotlib>=3.4.0
    pyyaml>=5.4.0
    astrochem_embedding>=0.1.0
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests*
    examples*
    docs*

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=3.0
    black>=22.0
    flake8>=4.0
    mypy>=0.950

[options.entry_points]
console_scripts =
    astro-amase = astro_amase.main:cli_entry

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist
ignore = E203,W503

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --cov=astro_amase --cov-report=html --cov-report=term